--- a/presentations.html
+++ b/presentations.html
@@ -8,6 +8,14 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
+     <!-- Bootstrap CSS -->
+     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+     <!-- Bootstrap JS, Popper.js и jQuery -->
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -140,12 +148,10 @@
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
             <h1 class="display-3 text-white mb-4 animated slideInDown">Презентации</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb justify-content-center mb-0">
+            <!-- <nav aria-label="breadcrumb animated slideInDown">
                     <li class="breadcrumb-item"><a href="books.html">Книги</a></li>
                     <li class="breadcrumb-item"><a href="video.html">Видео</a></li>
-                </ol>
-            </nav>
+            </nav> -->
         </div>
     </div>
     <!-- Page Header End -->
