--- a/service.html
+++ b/service.html
@@ -163,7 +163,7 @@
                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h5 class="mb-3">72-часовые курсы повышения квалификации для органов МСУ</h4>
+                            <h5 class="mb-3"><b>72-часовые курсы повышения квалификации для органов МСУ</b></h4>
                             <p class="mb-4">Дата: 28 июля- 1 августа 2022 года. г.Бишкек</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
@@ -175,7 +175,7 @@
                             <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h5 class="mb-3">Школа молодых фермеров</h4>
+                            <h5 class="mb-3"><b>Школа молодых фермеров</b></h4>
                             <p class="mb-4">Дата: 1-2 августа 2022 года. Тонский район Основная технология выращивания картофеля. Работа с семенами</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
@@ -187,7 +187,7 @@
                             <img class="img-fluid" src="img/germany.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h5 class="mb-3">Тренинг по разработке проектных предложений для привлечения финансирования</h4>
+                            <h5 class="mb-3"><b>Тренинг по разработке проектных предложений для привлечения финансирования</b></h4>
                             <p class="mb-4">Участники: выпускники Фонда Ханнса Зайделя из Нарынской области 10-11 июня 2022 в г.Нарын</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
@@ -201,7 +201,7 @@
                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h5 class="mb-3">Онлайн-конференция/семинар для личностного развития</h4>
+                            <h5 class="mb-3"><b>Онлайн-конференция/семинар для личностного развития</b></h4>
                             <p class="mb-4">Роберт Гарайссен 17 мая 2022 для регистрации отправьте уведомление на адрес omurkanova-b@hss.de</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
@@ -213,7 +213,7 @@
                             <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h5 class="mb-3">Онлайн-тренинг для личностного развития на тему: «ЭГО! Завышенная самооценка и адекватная уверенность в себе» г-на Роберта Гарайссена</h4>
+                            <h5 class="mb-3"><b>Онлайн-тренинг для личностного развития на тему: «ЭГО! Завышенная самооценка и адекватная уверенность в себе» г-на Роберта Гарайссена</b></h4>
                             <p class="mb-4">Дата и время: вторник, 28 июня 2022 г., в 18.30 (время для Бишкека)</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
@@ -225,7 +225,7 @@
                             <img class="img-fluid" src="img/germany.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h5 class="mb-3">Онлайн-конференция/лекция на тему: «Структура государственного и местного управления в Баварии - обзор», г-н Раймунд Хельфрих</h4>
+                            <h5 class="mb-3"><b>Онлайн-конференция/лекция на тему: «Структура государственного и местного управления в Баварии - обзор», г-н Раймунд Хельфрих</b></h4>
                             <p class="mb-4">Дата и время : 7 июля 2022 года, 18:30</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
