--- a/index.html
+++ b/index.html
@@ -142,7 +142,10 @@
                     </div>
                 </div> -->
             </div>
-            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
+            <div class="position-relative w-100">
+                <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email">
+                <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Отправить</button>
+            </div>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -158,8 +161,8 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда Ханнса Зайделя в ЦА</h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
+                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда Ханнса Зайделя в Центральной Азии</h1>
+                                    <a href="baza-znanii.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
                                 </div>
                             </div>
                         </div>
@@ -171,8 +174,21 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
-                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда Ханнса Зайделя в ЦА</h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
+                                    <h1 class="display-1 text-white mb-5 animated slideInDown">На службе демократии, мира и развития</h1>
+                                    <a href="about.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100" src="img/carousel-3.jpg" alt="Image" style="">
+                    <div class="carousel-caption">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-7">
+                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Повышение профессионализма для ключевых лиц ОМСУ</h1>
+                                    <a href="project.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
                                 </div>
                             </div>
                         </div>
@@ -251,13 +267,13 @@
                     <img class="img-fluid rounded" data-wow-delay="0.1s" src="img/about.jpg">
                 </div>
                 <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.3s">
-                    <h1 class="display-1 text-primary mb-0">25</h1>
-                    <p class="text-primary mb-4">ЛЕТ</p>
+                    <span class="display-1 text-primary mb-0">25</span>
+                    <span class="display-1 text-primary mb-0" style="font-size: 30px;">лет</span>
                     <h1 class="display-5 mb-4">Наша деятельность</h1>
                     <p class="mb-4">Понимание демократии
                         должно в каждом поколении формироваться заново
                     </p>
-                    <a class="btn btn-primary py-3 px-4" href="">Подробнее</a>
+                    <!-- <a class="btn btn-primary py-3 px-4" href="">Подробнее</a> -->
                 </div>
                 <div class="col-lg-3 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-5">
@@ -398,7 +414,7 @@
                             </div> -->
                             <h5 class="mb-3">Магистратура в Кыргызстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
-                            <a class="btn btn-sm dop-info" href="" class="dop-info"><i class="fa fa-plus text-primary me-2"></i><span class="dop-info__btn-text">Подробнее</span></a>
+                            <a class="btn btn-sm dop-info" href="academy-kyrgyzstan.html" class="dop-info"><i class="fa fa-plus text-primary me-2"></i><span class="dop-info__btn-text">Подробнее</span></a>
                         </div>
                     </div>
                 </div>
@@ -413,7 +429,7 @@
                             </div> -->
                             <h5 class="mb-3">Стипендия в Германии</h5>
                             <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии для одаренных молодых людей из развивающихся стран </p>
-                            <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href="scholarship-germany.html"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
