--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="position-relative">
                 <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email">
-                <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Отправить</button>
+                <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Подписка</button>
             </div>
         </div>
     </nav>
