--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-     <!-- Bootstrap CSS -->
-     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-     <!-- Bootstrap JS, Popper.js и jQuery -->
-     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -41,18 +35,19 @@
 
 
 
+
     <style>
-        .dropdown-item{
+        .dropdown-item {
             transition: 0.9s;
         }
 
-        .dropdown-item:hover{
+        .dropdown-item:hover {
             color: #497bb4;
         }
 
         @media (max-width: 991px) {
-                .navbar-collapse {
-                    background-color: white;
+            .navbar-collapse {
+                background-color: white;
             }
         }
     </style>
@@ -108,7 +103,8 @@
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
                 <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
-                <div class="nav-item dropdown">
+                <a href="contact.html" class="nav-item nav-link">Контакты</a>
+                <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База Знаний</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="books.html" class="dropdown-item">Книги</a>
@@ -124,7 +120,7 @@
                         <a href="testimonials.html" class="dropdown-item">Отзызы</a>
                         <a href="contact.html" class="dropdown-item nav-item active">Контакты</a>
                     </div>
-                </div>
+                </div> -->
                 <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
 
                 <!-- <div class="nav-item dropdown">
@@ -138,7 +134,10 @@
                     </div>
                 </div> -->
             </div>
-            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
+            <div class="position-relative">
+                <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email">
+                <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Подписка</button>
+            </div>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -233,7 +232,7 @@
 
 
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 450px;">
-                    <div class="position-relative rounded overflow-hidden h-100">
+                    <div class="position-relative rounded overflow-hidden h-100 w-100 wow fadeInUp" data-wow-delay="0.6s">
 
                         <a class="dg-widget-link" href="http://2gis.kg/bishkek/firm/70000001019356413/center/74.60238218307497,42.88129457646936/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть на карте Бишкека</a><div class="dg-widget-link"><a href="http://2gis.kg/bishkek/firm/70000001019356413/photos/70000001019356413/center/74.60238218307497,42.88129457646936/zoom/17?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=photos">Фотографии компании</a></div><div class="dg-widget-link"><a href="http://2gis.kg/bishkek/center/74.602075,42.881429/zoom/16/routeTab/rsType/bus/to/74.602075,42.881429╎Фонд Ханнса Зайделя, представительство в Центральной Азии?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Найти проезд до Фонд Ханнса Зайделя, представительство в Центральной Азии</a></div><script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script><script charset="utf-8">new DGWidgetLoader({"width":640,"height":600,"borderColor":"#a3a3a3","pos":{"lat":42.88129457646936,"lon":74.60238218307497,"zoom":16},"opt":{"city":"bishkek"},"org":[{"id":"70000001019356413"}]});</script><noscript style="color:#c00;font-size:16px;font-weight:bold;">Виджет карты использует JavaScript. Включите его в настройках вашего браузера.</noscript>
                     </div>
