--- a/info.html
+++ b/info.html
@@ -100,7 +100,8 @@
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
                 <a href="project.html" class="nav-item nav-link">Стипендиальные программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
-                <div class="nav-item dropdown">
+                <a href="contact.html" class="nav-item nav-link">Контакты</a>
+                <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="books.html" class="dropdown-item">Книги</a>
@@ -116,7 +117,7 @@
                         <a href="testimonials.html" class="dropdown-item">Отзызы</a>
                         <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
                     </div>
-                </div>
+                </div> -->
                 <a href="info.html" class="nav-item nav-link active">Информация для выпускников</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -129,7 +130,10 @@
                     </div>
                 </div> -->
             </div>
-            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
+            <div class="position-relative">
+                <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email">
+                <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Подписка</button>
+            </div>
         </div>
     </nav>
     <!-- Navbar End -->
