--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                                     <i class="fa fa-plus text-primary me-2"></i></a>
                             <div class="dropdown-list" style="display: none;">
                                 <ul>
-                                    <li><a href="какая-то_ссылка_1.html">магистратура</a></li>
+                                    <li><a href="academy-kazakhstan.html">магистратура</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -704,10 +704,6 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
