--- a/index.html
+++ b/index.html
@@ -458,13 +458,13 @@
                             <h5 class="mb-3">Магистратура в Казахстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики
                                 Казахстан</p>
-                            <a class="btn btn-sm dop-info" href="">
-                                    <i class="fa fa-plus text-primary me-2"></i></a>
-                            <div class="dropdown-list" style="display: none;">
-                                <ul>
-                                    <li><a href="academy-kazakhstan.html">магистратура</a></li>
-                                </ul>
-                            </div>
+                                <div class="dropdown">
+                                    <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
+                                    <div class="dropdown-menu bg-light m-0">
+                                        <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
+                                        <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -477,14 +477,13 @@
                             <h5 class="mb-3">Магистратура в Кыргызстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской
                                 Республики</p>
-                            <a class="btn btn-sm dop-info" href=""><i
-                                    class="fa fa-plus text-primary me-2"></i></a>
-                            <div class="dropdown-list" style="display: none;">
-                                <ul>
-                                    <li><a href="какая-то_ссылка_1.html">магистратура</a></li>
-                                    <li><a href="какая-то_ссылка_2.html">72 курсы пов. Кв.</a></li>
-                                </ul>
-                            </div>
+                                <div class="dropdown">
+                                    <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
+                                    <div class="dropdown-menu bg-light m-0">
+                                        <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
+                                        <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -497,13 +496,13 @@
                             <h5 class="mb-3">Стипендия в Германии</h5>
                             <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии для одаренных молодых людей из
                                 развивающихся стран</p>
-                            <a class="btn btn-sm dop-info" href=""><i
-                                    class="fa fa-plus text-primary me-2"></i></a>
-                            <div class="dropdown-list" style="display: none;">
-                                <ul>
-                                    <li><a href="scholarship-germany.html">Подробнее</a></li>
-                                </ul>
-                            </div>
+                                <div class="dropdown">
+                                    <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
+                                    <div class="dropdown-menu bg-light m-0">
+                                        <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
+                                        <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -515,14 +514,12 @@
                         <div class="service-text rounded p-5">
                             <h5 class="mb-3">Магистратура в Таджикистане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Таджикистан</p>
-                            <a class="btn btn-sm dop-info" href=""><i
-                                    class="fa fa-plus text-primary me-2"></i></a>
-                            <div class="dropdown-list" style="display: none;">
-                                <ul>
-                                    <li><a href="какая-то_ссылка_1.html">магистратура</a></li>
-                                    <li><a href="какая-то_ссылка_2.html">проект «Женщина лидер»</a></li>
-                                    <li><a href="какая-то_ссылка_3.html">проект «МСУ»</a></li>
-                                </ul>
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
+                                <div class="dropdown-menu bg-light m-0">
+                                    <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
+                                    <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -535,14 +532,12 @@
                         <div class="service-text rounded p-5">
                             <h5 class="mb-3">Магистратура в Узбекистане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Таджикистан</p>
-                            <a class="btn btn-sm dop-info" href=""><i
-                                    class="fa fa-plus text-primary me-2"></i></a>
-                            <div class="dropdown-list" style="display: none;">
-                                <ul>
-                                    <li><a href="какая-то_ссылка_1.html">магистратура</a></li>
-                                    <li><a href="какая-то_ссылка_2.html">проект «Женщина лидер»</a></li>
-                                    <li><a href="какая-то_ссылка_3.html">проект «МСУ»</a></li>
-                                </ul>
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
+                                <div class="dropdown-menu bg-light m-0">
+                                    <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
+                                    <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
+                                </div>
                             </div>
                         </div>
                     </div>
