--- a/project.html
+++ b/project.html
@@ -173,7 +173,13 @@
                             </div> -->
                             <h5 class="mb-3">Магистратура в Казахстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Казахстан</p>
-                            <a class="btn btn-sm" href="academy-kazakhstan.html"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
+                                <div class="dropdown-menu bg-light m-0">
+                                    <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
+                                    <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -188,7 +194,13 @@
                             </div> -->
                             <h5 class="mb-3">Магистратура в Кыргызстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
-                            <a class="btn btn-sm dop-info" href="" class="dop-info"><i class="fa fa-plus text-primary me-2"></i><span class="dop-info__btn-text">Подробнее</span></a>
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
+                                <div class="dropdown-menu bg-light m-0">
+                                    <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
+                                    <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -203,7 +215,13 @@
                             </div> -->
                             <h5 class="mb-3">Стипендия в Германии</h5>
                             <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии для одаренных молодых людей из развивающихся стран </p>
-                            <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
+                                <div class="dropdown-menu bg-light m-0">
+                                    <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
+                                    <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
