--- a/404.html
+++ b/404.html
@@ -89,14 +89,6 @@
                         <a href="404.html" class="dropdown-item active">404 Page</a>
                     </div>
                 </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="team.html" class="dropdown-item">Наша Команда</a>
-                        <a href="testimonials.html" class="dropdown-item">Отзызы</a>
-                        <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
-                    </div>
-                </div>
                 <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
 
                 <!-- <div class="nav-item dropdown">
@@ -109,8 +101,8 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
+                <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2" data-bs-toggle="modal" data-bs-target="#subscribeModal">Подписаться</button>
             </div>
-            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -119,19 +111,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-<<<<<<< HEAD
             <h1 class="display-3 text-white mb-4 animated slideInDown">404 Error</h1>
-            <!-- <nav aria-label="breadcrumb animated slideInDown">
-=======
-            <h1 class="display-3 text-white mb-4 animated slideInDown">Ура!!!</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
->>>>>>> 8faafec49b15d1f184c7f26bfdd6d60f7712dc54
-                <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">All good</li>
-                </ol>
-            </nav> -->
         </div>
     </div>
     <!-- Page Header End -->
