--- a/baza-znanii.html
+++ b/baza-znanii.html
@@ -100,23 +100,15 @@
                 <a href="index.html" class="nav-item nav-link">Главная</a>
                 <a href="about.html" class="nav-item nav-link">Новости</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
-                <a href="project.html" class="nav-item nav-link active">Стипендиальные программы</a>
+                <a href="project.html" class="nav-item nav-link">Стипендиальные программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
+                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">База знаний</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="books.html" class="dropdown-item">Книги</a>
                         <a href="presentations.html" class="dropdown-item">Презентации</a>
                         <a href="video.html" class="dropdown-item">Видео</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
-                </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О нас</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="team.html" class="dropdown-item">Наша команда</a>
-                        <a href="testimonials.html" class="dropdown-item">Отзызы</a>
-                        <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
                     </div>
                 </div>
                 <a href="info.html" class="nav-item nav-link">Информация для выпускников</a>
@@ -130,8 +122,8 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
+                <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2" data-bs-toggle="modal" data-bs-target="#subscribeModal">Подписаться</button>
             </div>
-            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -211,13 +203,13 @@
                
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Меню</h4>
-                    <a class="btn btn-link" href="">Главная</a>
-                    <a class="btn btn-link" href="">Новости</a>
-                    <a class="btn btn-link" href="">Тренинги</a>
-                    <a class="btn btn-link" href="">Стипендиальные Программы</a>
-                    <a class="btn btn-link" href="">Вопросы и Ответы</a>
-                    <a class="btn btn-link" href="">Контакты</a>
-                    <a class="btn btn-link" href="">Информация для выпускников</a>
+                    <a class="btn btn-link" href="index.html">Главная</a>
+                    <a class="btn btn-link" href="about.html">Новости</a>
+                    <a class="btn btn-link" href="service.html">Тренинги</a>
+                    <a class="btn btn-link" href="project.html">Стипендиальные Программы</a>
+                    <a class="btn btn-link" href="QA.html">Вопросы и Ответы</a>
+                    <a class="btn btn-link" href="contact.html">Контакты</a>
+                    <a class="btn btn-link" href="info.html">Информация для выпускников</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Контакты</h4>
@@ -287,6 +279,35 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="subscribeModal" tabindex="-1" aria-labelledby="subscribeModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="subscribeModalLabel">Подписка на рассылку</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Имя</label>
+                            <input type="text" class="form-control" id="name" placeholder="Введите ваше имя">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="Введите ваш email">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    <button type="button" class="btn btn-primary">Подписаться</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
