--- a/presentations.html
+++ b/presentations.html
@@ -117,14 +117,6 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="team.html" class="dropdown-item">Наша Команда</a>
-                        <a href="testimonials.html" class="dropdown-item">Отзызы</a>
-                        <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
-                    </div>
-                </div>
                 <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
 
                 <!-- <div class="nav-item dropdown">
@@ -137,8 +129,8 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
+                <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2" data-bs-toggle="modal" data-bs-target="#subscribeModal">Подписаться</button>
             </div>
-            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
