--- a/quote.html
+++ b/quote.html
@@ -166,13 +166,13 @@
                
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Меню</h4>
-                    <a class="btn btn-link" href="">Главная</a>
-                    <a class="btn btn-link" href="">Новости</a>
-                    <a class="btn btn-link" href="">Тренинги</a>
-                    <a class="btn btn-link" href="">Стипендиальные Программы</a>
-                    <a class="btn btn-link" href="">Вопросы и Ответы</a>
-                    <a class="btn btn-link" href="">Контакты</a>
-                    <a class="btn btn-link" href="">Информация для выпускников</a>
+                    <a class="btn btn-link" href="index.html">Главная</a>
+                    <a class="btn btn-link" href="about.html">Новости</a>
+                    <a class="btn btn-link" href="service.html">Тренинги</a>
+                    <a class="btn btn-link" href="project.html">Стипендиальные Программы</a>
+                    <a class="btn btn-link" href="QA.html">Вопросы и Ответы</a>
+                    <a class="btn btn-link" href="contact.html">Контакты</a>
+                    <a class="btn btn-link" href="info.html">Информация для выпускников</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Контакты</h4>
