--- a/video.html
+++ b/video.html
@@ -151,7 +151,7 @@
         <div class="container">
 
 
-            <div class="row g-4 portfolio-container">
+            <div class="row g-4 portfolio-container videos">
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
                         <img class="img-fluid" src="http://img.youtube.com/vi/eJO5HU_7_1w/maxresdefault.jpg" alt="">
