--- a/info.html
+++ b/info.html
@@ -101,6 +101,15 @@
                 <a href="project.html" class="nav-item nav-link">Стипендиальные программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
                 <a href="contact.html" class="nav-item nav-link">Контакты</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="books.html" class="dropdown-item">Книги</a>
+                        <a href="presentations.html" class="dropdown-item">Презентации</a>
+                        <a href="video.html" class="dropdown-item">Видео</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a>
+                    </div>
+                </div>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
                     <div class="dropdown-menu bg-light m-0">
