--- a/service.html
+++ b/service.html
@@ -41,6 +41,7 @@
         .dropdown-item:hover{
             color: #497bb4;
         }
+
         @media (max-width: 991px) {
                 .navbar-collapse {
                     background-color: white;
@@ -101,6 +102,15 @@
                 <a href="project.html" class="nav-item nav-link">Стипендиальные программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
                 <a href="contact.html" class="nav-item nav-link">Контакты</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="books.html" class="dropdown-item">Книги</a>
+                        <a href="presentations.html" class="dropdown-item">Презентации</a>
+                        <a href="video.html" class="dropdown-item">Видео</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a>
+                    </div>
+                </div>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
                     <div class="dropdown-menu bg-light m-0">
@@ -164,7 +174,7 @@
                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h5 class="mb-3"><b>72-часовые курсы повышения квалификации для органов МСУ</b></h4>
+                            <h5 class="mb-3"><b>72-часовые курсы повышения квалификации для органов МСУ</b></h5>
                             <p class="mb-4">Дата: 28 июля- 1 августа 2022 года. г.Бишкек</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
