--- a/project.html
+++ b/project.html
@@ -181,7 +181,7 @@
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Казахстан</p>
                             <div class="dropdown">
                                 <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
-                                <div class="dropdown-menu bg-light m-0">
+                                <div class="dropdown-menu bg-dark m-0 mt-2">
                                     <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
                                     <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
                                 </div>
@@ -202,7 +202,7 @@
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
                             <div class="dropdown">
                                 <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
-                                <div class="dropdown-menu bg-light m-0">
+                                <div class="dropdown-menu bg-dark m-0 mt-2">
                                     <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
                                     <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
                                 </div>
@@ -223,7 +223,7 @@
                             <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии для одаренных молодых людей из развивающихся стран </p>
                             <div class="dropdown">
                                 <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Подробнее</button>
-                                <div class="dropdown-menu bg-light m-0">
+                                <div class="dropdown-menu bg-dark m-0 mt-2">
                                     <a href="{% url 'book' %}" class="dropdown-item">Магистратура</a>
                                     <a href="{% url 'presentation' %}" class="dropdown-item">72 часа чего-то там</a>
                                 </div>
