--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         }
     
         .dropdown-list a:hover {
-            background-color: #007bff;
+            background-color: #0097d2;
             color: white;
         }
     
