--- a/video.html
+++ b/video.html
@@ -154,7 +154,7 @@
             <div class="row g-4 portfolio-container mb-5">
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="http://img.youtube.com/vi/eJO5HU_7_1w/maxresdefault.jpg" alt="">
+                        <img class="img-fluid" src="./img/photo_2023-05-04_15-43-21.jpg" alt="">
                         <div class="">
                             <br>
                             <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="http://img.youtube.com/vi/eJO5HU_7_1w/maxresdefault.jpg" alt="">
+                        <img class="img-fluid" src="./img/photo_2023-05-04_15-43-21.jpg" alt="">
                         <div class="">
                             <br>
                             <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="http://img.youtube.com/vi/eJO5HU_7_1w/maxresdefault.jpg" alt="">
+                        <img class="img-fluid" src="./img/photo_2023-05-04_15-43-21.jpg" alt="">
                         <div class="">
                             <br>
                             <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
