video now is cool

--- a/one_video.html
+++ b/one_video.html
@@ -176,7 +176,7 @@
 
 
             <div class="row g-4 portfolio-container mb-5">
-                <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 portfolio-item second" data-wow-delay="0.5s">
                     <div class="team-item rounded">
                         <img class="img-fluid" src="http://img.youtube.com/vi/mxyB7gho7cw/maxresdefault.jpg" alt="">
                         <div class="">
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 portfolio-item second" data-wow-delay="0.5s">
                     <div class="team-item rounded">
                         <img class="img-fluid" src="http://img.youtube.com/vi/mxyB7gho7cw/maxresdefault.jpg" alt="">
                         <div class="">
@@ -200,7 +200,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 portfolio-item second" data-wow-delay="0.5s">
                     <div class="team-item rounded">
                         <img class="img-fluid" src="http://img.youtube.com/vi/mxyB7gho7cw/maxresdefault.jpg" alt="">
                         <div class="">
