--- a/video.html
+++ b/video.html
@@ -152,7 +152,7 @@
 
 
             <div class="row g-4 portfolio-container mb-5">
-                <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 portfolio-item second" data-wow-delay="0.5s">
                     <div class="team-item rounded">
                         <img class="img-fluid" src="http://img.youtube.com/vi/0_e_9h_6sCY/maxresdefault.jpg" alt="">
                         <div class="">
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 portfolio-item second" data-wow-delay="0.5s">
                     <div class="team-item rounded">
                         <img class="img-fluid" src="http://img.youtube.com/vi/pjsotIaBr34/maxresdefault.jpg" alt="">
                         <div class="">
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 portfolio-item second" data-wow-delay="0.5s">
                     <div class="team-item rounded">
                         <img class="img-fluid" src="http://img.youtube.com/vi/mxyB7gho7cw/maxresdefault.jpg" alt="">
                         <div class="">
