--- a/index.html
+++ b/index.html
@@ -179,20 +179,22 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Главная</a>
-                <a href="about.html" class="nav-item nav-link">Новости</a>
-                <a href="service.html" class="nav-item nav-link">Тренинги</a>
-                <a href="project.html" class="nav-item nav-link">Стипендиальные программы</a>
-                <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
-                <a href="contact.html" class="nav-item nav-link">Контакты</a>
-                <div class="nav-item dropdown">
+                <a href="project.html" class="nav-item nav-link">Стипендии</a>
+                <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="books.html" class="dropdown-item-a">Книги</a>
                         <a href="presentations.html" class="dropdown-item-a">Презентации</a>
                         <a href="video.html" class="dropdown-item-a">Видео</a>
-                        <!-- <a href="404.html" class="dropdown-item-a">404 Page</a> -->
                     </div>
-                </div>
+                </div> -->
+                <a href="baza-znanii.html" class="nav-item nav-link">База знаний</a>
+                <a href="service.html" class="nav-item nav-link">Тренинги</a>
+                <a href="info.html" class="nav-item nav-link">Информация для выпускников</a>
+                <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
+                <a href="about.html" class="nav-item nav-link">Новости</a>
+                <a href="contact.html" class="nav-item nav-link">Контакты</a>
+                
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О нас</a>
                     <div class="dropdown-menu bg-light m-0">
@@ -201,7 +203,6 @@
                         <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
                     </div>
                 </div> -->
-                <a href="info.html" class="nav-item nav-link">Информация для выпускников</a>
 
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -245,20 +246,20 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">На службе демократии, мира и развития</h1>
-                                    <a href="about.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
+                                    <!-- <a href="about.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a> -->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-3.jpg" alt="Image" style="">
+                    <img class="w-100" src="img/carousel-3.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Повышение профессионализма для ключевых лиц ОМСУ</h1>
-                                    <a href="project.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
+                                    <!-- <a href="project.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a> -->
                                 </div>
                             </div>
                         </div>
@@ -344,7 +345,7 @@
                     <p class="mb-4 mt-5">— Рост кадрового потенциала госуправления, местного самоуправления;<br>— Усиление гражданского общества и парламентаризма</p>
                     <!-- <a class="btn btn-primary py-3 px-4" href="">Подробнее</a> -->
                 </div>
-                <div class="col-lg-3 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
+                <!-- <div class="col-lg-3 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-5">
                         <div class="col-12 col-sm-6 col-lg-12">
                             <div class="border-start ps-4">
@@ -361,7 +362,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -397,7 +398,7 @@
             </div>
             <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
                 <div>
-                    <span class="display-4 text-white" data-toggle="counter-up">200</span>
+                    <span class="display-4 text-white" data-toggle="counter-up">400</span>
                     <span class="display-4 text-white fs-1 me-3">+</span>
                 </div>
                 <span class="fs-5 fw-semi-bold text-light">Микротренингов</span>
@@ -409,11 +410,10 @@
 
 
     <!-- Features Start -->
-    <div class="container-xxl py-5">
+    <!-- <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <!-- <p class="fs-5 fw-bold text-primary">Why Choosing Us!</p> -->
                     <h1 class="display-5 mb-4">Уникальности нашей учебной платформы</h1>
                     <p class="mb-4">Учебная платформа призвана совершенствовать образовательный процесс по поддержке выпускников и стипендиатов программы Фонда Ханнса Зайделя.</p>
                     <a class="btn btn-primary py-3 px-4" href="baza-znanii.html">Подробнее</a>
@@ -459,7 +459,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Features End -->
 
 
@@ -635,7 +635,7 @@
 
 
     <!-- Quote Start -->
-    <div class="container-fluid quote py-5" data-parallax="scroll" data-image-src="img/carousel-2.jpg">
+    <!-- <div class="container-fluid quote py-5" data-parallax="scroll" data-image-src="img/carousel-2.jpg">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -680,7 +680,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Quote End -->
 
 
