--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@
                 </div> -->
                 <a href="baza-znanii.html" class="nav-item nav-link">База знаний</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
-                <a href="info.html" class="nav-item nav-link">Информация для выпускников</a>
+                <a href="info.html" class="nav-item nav-link">Для выпускников</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
                 <a href="about.html" class="nav-item nav-link">Новости</a>
                 <a href="contact.html" class="nav-item nav-link">Контакты</a>
