--- a/academy-tadgikistan.html
+++ b/academy-tadgikistan.html
@@ -153,28 +153,21 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Главная</a>
-                <a href="about.html" class="nav-item nav-link">Новости</a>
+                <a href="project.html" class="nav-item nav-link">Стипендии</a>
+                <!-- <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="books.html" class="dropdown-item-a">Книги</a>
+                        <a href="presentations.html" class="dropdown-item-a">Презентации</a>
+                        <a href="video.html" class="dropdown-item-a">Видео</a>
+                    </div>
+                </div> -->
+                <a href="baza-znanii.html" class="nav-item nav-link">База знаний</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
-                <a href="project.html" class="nav-item nav-link active">Стипендиальные Программы</a>
-                <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База Знаний</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="books.html" class="dropdown-item">Книги</a>
-                        <a href="presentations.html" class="dropdown-item">Презентации</a>
-                        <a href="video.html" class="dropdown-item">Видео</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
-                </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="team.html" class="dropdown-item">Наша Команда</a>
-                        <a href="testimonials.html" class="dropdown-item">Отзызы</a>
-                        <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
-                    </div>
-                </div>
-                <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
+                <a href="info.html" class="nav-item nav-link">Для выпускников</a>
+                <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
+                <a href="about.html" class="nav-item nav-link">Новости</a>
+                <a href="contact.html" class="nav-item nav-link">Контакты</a>
 
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
